# egmde

./: .gitignore  CMakeLists.txt  README.md  egfullscreenclient.cpp  egfullscreenclient.h  eglauncher.cpp  eglauncher.h  egmde-app.sh  egmde-desktop.sh  egmde-launch.sh  egmde-terminal  egmde.cpp  egmde.desktop  egprimary_selection_device_controller.cpp  egprimary_selection_device_controller.h  egshellcommands.cpp  egshellcommands.h  egwallpaper.cpp  egwallpaper.h  egwindowmanager.cpp  egwindowmanager.h  egworker.cpp  egworker.h  gtk_primary_selection.cpp  gtk_primary_selection.h  open_desktop_entry.cpp  open_desktop_entry.h  primary_selection.cpp  primary_selection.h  printer.cpp  printer.h  wlcs_fixture.cpp
wayland-generated/: CMakeLists.txt  gtk-primary-selection_wrapper.cpp  gtk-primary-selection_wrapper.h  primary-selection-unstable-v1_wrapper.cpp  primary-selection-unstable-v1_wrapper.h
wayland-protocols/: gtk-primary-selection.xml
